testing a fix for overflow on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
